[gd_scene load_steps=14 format=3 uid="uid://bivcmhjsdsyy2"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_py671"]
[ext_resource type="PackedScene" uid="uid://bmlrxncyo4hrg" path="res://prefabs/spritesheet.tscn" id="2_px364"]
[ext_resource type="PackedScene" uid="uid://cs8qatetudify" path="res://prefabs/energy_sword.tscn" id="3_1yiyo"]
[ext_resource type="AudioStream" uid="uid://h0ln3dnbqsfw" path="res://sounds/BLLTRico_Ricochet Metallic_04.wav" id="3_lihhf"]
[ext_resource type="PackedScene" uid="uid://dtoe3hkqfi5gw" path="res://prefabs/spreadfire.tscn" id="4_lteaw"]
[ext_resource type="AudioStream" uid="uid://b505215xfthyh" path="res://sounds/High-Tech Gadget Activate.wav" id="4_rg687"]
[ext_resource type="AudioStream" uid="uid://db3xpb1qqhqnv" path="res://sounds/Holographic Interaction-32.wav" id="5_g5n55"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lihhf"]
size = Vector2(10, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rg687"]
size = Vector2(12, 17)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i3pqv"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hqtel"]
bg_color = Color(0.388235, 0.8, 0.372549, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="CircleShape2D" id="CircleShape2D_lihhf"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_px364"]
radius = 150.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_py671")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_lihhf")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3.5, 3.5)

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_rg687")
debug_color = Color(0.991963, 0, 0.258549, 0.42)

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
process_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -12.0
offset_top = -14.0
offset_right = 12.0
offset_bottom = -10.0
grow_horizontal = 2
theme_override_styles/background = SubResource("StyleBoxFlat_i3pqv")
theme_override_styles/fill = SubResource("StyleBoxFlat_hqtel")
value = 100.0
show_percentage = false

[node name="Spritesheet" parent="." instance=ExtResource("2_px364")]
unique_name_in_owner = true
animation = &"player_idle"

[node name="PickupRadius" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupRadius"]
shape = SubResource("CircleShape2D_lihhf")
debug_color = Color(1, 0.339264, 0.759845, 0.419608)

[node name="Weapons" type="Node2D" parent="."]

[node name="EnergySword" parent="Weapons" instance=ExtResource("3_1yiyo")]

[node name="Spreadfire" parent="Weapons" instance=ExtResource("4_lteaw")]

[node name="WeaponRange" type="Area2D" parent="Weapons"]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="RangeCollider" type="CollisionShape2D" parent="Weapons/WeaponRange"]
shape = SubResource("CircleShape2D_px364")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="LevelUpText" type="RichTextLabel" parent="CanvasLayer"]
offset_left = -34.0
offset_top = -29.0
offset_right = 34.0
offset_bottom = -4.0
theme_override_font_sizes/normal_font_size = 14
text = "Level up!"

[node name="Audio" type="Node" parent="."]

[node name="XPPickupSound" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("4_rg687")

[node name="SpreadshotWeaponSound" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("3_lihhf")
volume_db = -10.0

[node name="LevelUpSound" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = ExtResource("5_g5n55")
volume_db = 10.0
